Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78559

QTWEBENGINE_CHROMIUM_FLAGS does not parse js-flags correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.15.1
    • 5.9.5
    • WebEngine
    • None
    • Linux/X11
    • af51e84171a922a67b59c1ad121b22a444f63bfb (qt/qtwebengine/5.15)

    Description

      If using QTWEBENGINE_CHROMIUM_FLAGS environment variable, I cannot quote flags passed to js-flags.  This also prevents passing more than 1 flag to js-flags.  Flags passed via the command line do get parsed correctly.

       

      Attachments

        For Gerrit Dashboard: QTBUG-78559
        # Subject Branch Project Status CR V

        Activity

          People

            michal Michal Klocek
            mschan01 Michael Schanne
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes