Add very basic chromium flags parser

Setting chromium flags QTWEBENGINE_CHROMIUM_FLAGS only worked
for simple flags, and we did only split(' '). This means setting
anything quoted is missing parser and misbehaves.
Add very very basic parser to support sth like:

QTWEBENGINE_CHROMIUM_FLAGS='foo="foo1 foo2 foor3" bar'

Fixes: QTBUG-78559
Fixes: QTBUG-83035
Change-Id: Ife62216ee013f4f888f2ec6f7cad59fcafb8a71e
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>